# mitsotakiera

./: CMakeLists.txt  LICENSE.md  README.md  build.sh  flash_mitsos.sh  flash_takis.sh
mitsos/: CMakeLists.txt  mitsos.c  mitsos.h  mitsos_stdio.c  mitsos_usb.c  tusb_config.h
mitsoxmlib/: CMakeLists.txt  mxml-attr.c  mxml-config.h  mxml-file.c  mxml-get.c  mxml-index.c  mxml-node.c  mxml-private.h  mxml-search.c  mxml-set.c  mxml-string.c  mxml.h
takis/: CMakeLists.txt  takis.c  takis.h  tusb_config.h
